# https-everywhere-lib-core

./: .gitignore  Cargo.toml  LICENSE  README.md  test_features_combo.py
.github/: dependabot.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  regex.rs  rewriter.rs  rulesets.rs  settings.rs  storage.rs  strings.rs  update_channels.rs  updater.rs
src/updater/: update_channels.rs
tests/: hosts.bf  hosts.txt  mock_rulesets.json  rulesets_representation.txt  update_channels.json  update_channels_representation.txt
