[package]
name = "https-everywhere-lib-core"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "HTTPS Everywhere Core Library"
license = "LGPL-2.1-or-later"

[features]
default = ["add_rulesets", "potentially_applicable", "updates"]
add_rulesets = ["serde_json"]
potentially_applicable = []
updates = ["openssl", "serde_json"]

[dependencies]
serde_json = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
lazy_static = "1.3"
