[package]
name = "https-everywhere-lib-core"
version = "0.1.1"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "HTTPS Everywhere Core Library"
license = "LGPL-2.1-or-later"
repository = "https://github.com/efforg/https-everywhere-lib-core"

[features]
default = ["add_rulesets", "potentially_applicable", "updates"]
add_rulesets = ["serde_json"]
potentially_applicable = []
updates = ["openssl", "serde_json", "http_req", "log", "flate2"]

[dependencies]
serde_json = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
http_req = { version = "0.5", optional = true }
log = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
lazy_static = "1.3"
