[package]
name = "https-everywhere-lib-core"
version = "0.1.2"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
description = "HTTPS Everywhere Core Library"
license = "LGPL-2.1-or-later"
repository = "https://github.com/efforg/https-everywhere-lib-core"
readme = "README.md"

[features]
default = ["updater", "rewriter", "get_simple_rules_ending_with"]
rewriter = ["url", "regex", "lazy_static", "log", "potentially_applicable", "lru", "settings", "bloomfilter"]
updater = ["add_rulesets", "openssl", "http_req", "log", "flate2", "lazy_static", "ring"]
add_rulesets = ["serde_json"]
potentially_applicable = []
get_simple_rules_ending_with = []
settings = ["serde_json", "url"]

[dependencies]
serde_json = { version = "1.0", optional = true }
openssl = { version = "0.10", optional = true }
http_req = { version = "0.7", optional = true }
log = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }
lazy_static = { version = "1.3", optional = true }
url = { version = "2.0", optional = true }
regex = { version = "1.1", optional = true }
lru = { version = "0.6", optional = true }
bloomfilter = { version = "1.0", optional = true }
ring = { version = "0.16", optional = true }
cfg-if = "1.0"

[dev-dependencies]
lazy_static = "1.3"
multi-default-trait-impl = "0.1"
regex = "1.1"
